--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 										</header>
 										<p>I am currently a postdoctoral fellow at the Department of Biostatistics and Bioinformatics at Emory University. I completed my PhD degree in Statistics at the University of  California Davis and was recrutted as a lecturer prior joining Emory. I am interested in developing statistical methodlogies that can address practical questions that require analysis of complex data structures. My methodological interests are in high dimensional statistics, time series analysis, stochastic processes and aplication of random matrix theory to statistics.</p>
 										<ul class="actions">
-											<li><a href="file:///C:/Users/JNAMDAR/OneDrive%20-%20Emory%20University/Documents/Website/html5up-editorial/Jamshid_Namdari_CV_2025_updated.pdf#" class="button big">CV</a></li>
+											<li><a href="./Jamshid_Namdari_CV_2025_updated.pdf#" class="button big">CV</a></li>
 										</ul>
 									</div>
 									<span class="image object" style="
