--- a/HDTS.html
+++ b/HDTS.html
@@ -95,7 +95,7 @@
 
 							<!-- Search -->
 								<section id="search" class="alt">
-									<form method="post" action="file:///C:/Users/JNAMDAR/Downloads/html5up-editorial/generic.html#">
+									<form method="post" action="index.html#">
 										<input type="text" name="query" id="query" placeholder="Search">
 									</form>
 								</section>
