--- a/software.html
+++ b/software.html
@@ -121,7 +121,7 @@ processes
 											</ul>
 										</li>
 
-<li><a href="file:///C:/Users/JNAMDAR/OneDrive%20-%20Emory%20University/Documents/Website/html5up-editorial/teaching.html">Teaching</a></li>
+<li><a href="teaching.html">Teaching</a></li>
 
 										<li><a href="software.html#">Software</a></li>
 										<li><a href="other.html#">Other</a></li>
