--- a/software.html
+++ b/software.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- saved from url=(0108)file:///C:/Users/JNAMDAR/OneDrive%20-%20Emory%20University/Documents/Website/html5up-editorial/software.html -->
+<!-- saved from url=(0108)file:///C:/Users/JNAMDAR/OneDrive%20-%20Emory%20University/Documents/Website/html5up-editorial/teaching.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Generic - Editorial by HTML5 UP</title>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="./software_files/main.css">
+		<link rel="stylesheet" href="./teaching_files/main.css">
 	</head>
 	<body class="">
 
@@ -17,13 +17,13 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Jamshid Namdari</strong></a>
+									<a href="file:///C:/Users/JNAMDAR/OneDrive%20-%20Emory%20University/Documents/Website/html5up-editorial/index.html" class="logo"><strong>Jamshid Namdari</strong></a>
 									<ul class="icons">
-										<li><a href="index.html#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="index.html#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="tindex.html#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="index.html#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="index.html#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="file:///C:/Users/JNAMDAR/Downloads/html5up-editorial/teaching.html#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="file:///C:/Users/JNAMDAR/Downloads/html5up-editorial/teaching.html#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="file:///C:/Users/JNAMDAR/Downloads/html5up-editorial/teaching.html#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+										<li><a href="file:///C:/Users/JNAMDAR/Downloads/html5up-editorial/teaching.html#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="file:///C:/Users/JNAMDAR/Downloads/html5up-editorial/teaching.html#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
 
@@ -98,7 +98,7 @@ processes
 
 							<!-- Search -->
 								<section id="search" class="alt">
-									<form method="post" action="index.html#">
+									<form method="post" action="teaching.html#">
 										<input type="text" name="query" id="query" placeholder="Search">
 									</form>
 								</section>
@@ -166,11 +166,11 @@ Emory University<br>
 			</div>
 
 		<!-- Scripts -->
-			<script src="./software_files/jquery.min.js"></script>
-			<script src="./software_files/browser.min.js"></script>
-			<script src="./software_files/breakpoints.min.js"></script>
-			<script src="./software_files/util.js"></script>
-			<script src="./software_files/main.js"></script>
+			<script src="./teaching_files/jquery.min.js"></script>
+			<script src="./teaching_files/browser.min.js"></script>
+			<script src="./teaching_files/breakpoints.min.js"></script>
+			<script src="./teaching_files/util.js"></script>
+			<script src="./teaching_files/main.js"></script>
 
 	
 </body></html>
