--- a/software.html
+++ b/software.html
@@ -17,7 +17,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="file:///C:/Users/JNAMDAR/OneDrive%20-%20Emory%20University/Documents/Website/html5up-editorial/index.html" class="logo"><strong>Jamshid Namdari</strong></a>
+									<a href="index.html" class="logo"><strong>Jamshid Namdari</strong></a>
 									<ul class="icons">
 										<li><a href="file:///C:/Users/JNAMDAR/Downloads/html5up-editorial/teaching.html#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="file:///C:/Users/JNAMDAR/Downloads/html5up-editorial/teaching.html#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
