--- a/PP.html
+++ b/PP.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- saved from url=(0103)file:///C:/Users/JNAMDAR/OneDrive%20-%20Emory%20University/Documents/Website/html5up-editorial/PP.html# -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Generic - Editorial by HTML5 UP</title>
+		<title>Jamshid Namdari</title>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="./PP_files/main.css">
+		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body class="">
 
