--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 											<h1>Jamshid Namdari</h1>
 											
 										</header>
-										<p>I am currently a postdoctoral fellow at the Department of Biostatistics and Bioinformatics at Emory University. I completed my PhD degree in Statistics at the University of  California Davis and was recrutted as a lecturer prior joining Emory. I am interested in developing statistical methodlogies that can address practical questions that require analysis of complex data structures. My methodological interests are in high dimensional statistics, time series analysis, stochastic processes and aplication of random matrix theory to statistics.</p>
+										<p>I am currently a postdoctoral fellow at the Department of Biostatistics and Bioinformatics at Emory University. I completed my PhD degree in Statistics at the University of California Davis and was recruited as a lecturer, teaching undergraduates for four years.<p>
+										<p>I am interested in developing solutions to important scientific problems that involve complex data structures, such as functional data, image data and time series. In particular, I focus on creating statistical frameworks that emphasize rigorous inference, scalable computational methods, and the development of software for practical implementation. My research interests lie broadly in high-dimensional statistics, time series analysis, spectral methods, signal and image Analysis, dynamic learning and inference, point process theory, stochastic processes, and random matrix theory.<p>
 										<ul class="actions">
 											<li><a href="./index_files/Jamshid_Namdari_CV_2025_updated.pdf#" class="button big">CV</a></li>
 										</ul>
